fix: proper light and dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
 body {
   margin: 0;
-  background-color: #e8effc;
   font-family: 'Inter', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
